<resources>
    <string name="app_name">conocimiento</string>
    <string name="todo">TODO</string>
    <string name="cargaTexto">Cargando</string>
    <string name="imagenfondo">imagenFondo</string>
    <string name="cargando">Cargando</string>
    <string name="por_david_s_ez_araneda">Por David Sáez Araneda</string>
    <string name="por_david_s_ez_aranedad">Por David Sáez Araneda</string>
    <string name="login">Login</string>
    <string name="clave">Clave</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario_debe_ser_mayor_a_2">*Usuario debe ser mayor a 2</string>
    <string name="contrase_a_debe_ser_mayor_a_8">*Contraseña debe ser mayor a 8</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="por_david_s_ez_aranedaa">Por David Sáez Araneda</string>
    <string name="salir">Salir</string>
</resources>