<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"


    android:background="@color/teal_700"
    tools:context=".SecondActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:drawablePadding="8dp"

                android:inputType="none"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#000000"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:hint="@string/por_david_s_ez_aranedaa"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#000000"

                />

            <Button
                android:id="@+id/cerrar"
                android:layout_width="290dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/salir"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>